<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".InClass02"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_test"
        android:text="@string/text_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_test"
        android:text="@string/button_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_avg"
        android:text="@string/text_avg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <TextView
            android:text="@string/text_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <SeekBar
            android:id="@+id/seekbar_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_clear"
        android:text="@string/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
